--- a/01-Provisioning/01-Ansible/roles/delete_virtualbox_vms/tasks/main.yaml
+++ b/01-Provisioning/01-Ansible/roles/delete_virtualbox_vms/tasks/main.yaml
@@ -1,3 +1,3 @@
 - name: Delete VMs
-  command: VBoxManage unregistervm --delete "{{ item.hostname }}"
+  command: VBoxManage unregistervm "{{ item.hostname }}" --delete
   loop: "{{ vms }}"
