--- a/01-Provisioning/01-Ansible/site.yaml
+++ b/01-Provisioning/01-Ansible/site.yaml
@@ -5,3 +5,5 @@
   roles:
     - { role: create_virtualbox_vms, when: "create|default(true)|bool == true" }
     - { role: delete_virtualbox_vms, when: "delete|default(false)|bool == true" }
+    - { role: stop_virtualbox_vms, when: "stop|default(false)|bool == true" }
+    - { role: start_virtualbox_vms, when: "start|default(false)|bool == true" }
